Extract devise/sessions/new literals into en.yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,14 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  devise:
+    sessions:
+      new:
+        title: Log in
+        submit: Log in
+        label:
+          email: Email
+          password: Password
+        sign-in:
+          google: Sign in with Google
+          facebook: Sign in with Facebook
