--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,32 @@
 
 en:
   devise:
+    mailer:
+      confirmation_instructions:
+        title: "Welcome %{email} !"
+        confirm-text:  You can confirm your account email through the link below:
+        confirm-account: Confirm my account
+      email_changed:
+        title: "Hello %{email} !"
+        unconfirmed-email-change-text: "We're contacting you to notify you that your email is being changed to %{email}."
+        email-change-text: "We're contacting you to notify you that your email has been changed to %{email}."
+      password_change:
+        title: "Hello %{email} !"
+        text:
+          change-password-text: We're contacting you to notify you that your password has been changed.
+      reset_password_instructions:
+        title: "Hello %{email} !"
+        change-password: Change my password
+        text:
+          information: Someone has requested a link to change your password. You can do this through the link below.
+          ignore: If you didn't request this, please ignore this email.
+          information-about-link: Your password won't change until you access the link above and create a new one.
+      unlock_instructions:
+        title: "Hello %{email} !"
+        link: Unlock my account
+        text:
+          information-why-locked: Your account has been locked due to an excessive number of unsuccessful sign in attempts.
+          instruction: Click the link below to unlock your account:
     passwords:
       new:
         title: Forgot your password?
@@ -43,7 +69,7 @@ en:
         label:
           password: New password
           password: Confirm new
-        characters-limit: "#{limit} characters minimum" 
+        characters-limit: "%{limit} characters minimum"
     registrations:
       new:
         title: Sign up
@@ -71,7 +97,7 @@ en:
           password_confirmation: Password confirmations
           current_password: Current password
           remember: Remember me
-        character-limit: characters minimum
+        character-limit: "%{limit} characters minimum"
     sessions:
       new:
         title: Log in
