--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,10 +31,16 @@
 
 en:
   devise:
+    confirmations:
+      new:
+        title: Resend confirmation instructions
+        submit: Resend confirmation instructions
+        label:
+          email: Email
     mailer:
       confirmation_instructions:
         title: "Welcome %{email} !"
-        confirm-text:  You can confirm your account email through the link below:
+        confirm-text: 'You can confirm your account email through the link below:'
         confirm-account: Confirm my account
       email_changed:
         title: "Hello %{email} !"
@@ -56,7 +62,7 @@ en:
         link: Unlock my account
         text:
           information-why-locked: Your account has been locked due to an excessive number of unsuccessful sign in attempts.
-          instruction: Click the link below to unlock your account:
+          instruction: 'Click the link below to unlock your account:'
     passwords:
       new:
         title: Forgot your password?
@@ -109,3 +115,17 @@ en:
         sign-in:
           google: Sign in with Google
           facebook: Sign in with Facebook
+    shared:
+      links:
+        log-in: Log in
+        sign-up: Sign up
+        forgot-your-password: Forgot your password?
+        didnt-receive-confirmation: Didn't receive confirmation instructions?
+        didnt-receive-unlock: Didn't receive unlock instructions?
+
+    unlocks:
+      new:
+        title: Resend unlock instructions
+        submit: Resend unlock instructions
+        label:
+          email: Email
