static text to en.yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,7 @@ en:
       form:
         label:
           country: Country name
+          abbreviation: Abbreviation
         submit: Save
       edit:
         title: Edit country details
