move static text to en.yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,6 +73,9 @@ en:
     application:
       logout: Log out
       login: Login
+      login-name: 'Logged in as: '
+      links:
+        admin: Admin panel
   devise:
     confirmations:
       new:
