move static text to en.yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,6 +30,8 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  app:
+    title: Travelator
   admin:
     components:
       search:
